--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.1",
     "helmet": "^8.1.0",
